# portfolio-market-customer-intelligence

./: README.md  pyproject.toml  quick_start.py
.github/workflows/: ci.yml
api/: main.py
api/routers/: health.py  search.py
docker/: Dockerfile
docs/: project_manifest.md
src/: __init__.py
src/config/: settings.py
src/mcp/: __init__.py  client.py
src/mcp/servers/: __init__.py  social_media_server.py
src/rag/: __init__.py  vector_store.py
